<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <include
        layout="@layout/app_bar_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/colorBranco"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_menu"
        app:itemIconTint="@color/colorPreto"
        app:itemTextColor="@color/colorPreto"
        app:menu="@menu/activity_menu_drawer">

        <LinearLayout
            android:id="@+id/linea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical"
            android:padding="16dp">


            <LinearLayout
                android:id="@+id/linearLayoutSobre"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:background="@drawable/linear_layout_shape_white"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageViewSobre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_logo_globo" />

                <TextView
                    android:id="@+id/textViewAbout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="start|center_vertical"
                    android:paddingStart="30dp"
                    android:text="@string/sobre"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutSair"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:background="@drawable/linear_layout_shape_white"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageViewSair"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_logo_sair" />

                <TextView
                    android:id="@+id/textViewLogout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center|start"
                    android:paddingStart="30dp"
                    android:text="@string/sair"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:id="@+id/autor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/bcc_coworking"
                android:textColor="#959494" />


        </LinearLayout>


    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>
